JSAI/error/src/test/resources/base/v023.js
var o = {a: 1};
delete o.a;
print(o.a);